@@ -135,7 +135,7 @@ public class StringVisitor extends VisitorBase {
             // corba:anonstring
             Anonstring anonstring = new Anonstring();
             anonstring.setQName(new QName(typeMap.getTargetNamespace(), stringScopedName.toString()));
-            anonstring.setBound(new Long(boundNode.toString()));
+            anonstring.setBound(Long.valueOf(boundNode.toString()));
             anonstring.setType(simpleType.getQName());
 
             anon = anonstring;
@@ -144,7 +144,7 @@ public class StringVisitor extends VisitorBase {
             // corba:anonwstring
             Anonwstring anonwstring = new Anonwstring();
             anonwstring.setQName(new QName(typeMap.getTargetNamespace(), stringScopedName.toString()));
-            anonwstring.setBound(new Long(boundNode.toString()));
+            anonwstring.setBound(Long.valueOf(boundNode.toString()));
             anonwstring.setType(simpleType.getQName());
 
             anon = anonwstring;
@@ -180,7 +180,7 @@ public class StringVisitor extends VisitorBase {
             // corba:anonstring
             Anonstring anonstring = new Anonstring();
             anonstring.setQName(new QName(typeMap.getTargetNamespace(), anonstringName));
-            anonstring.setBound(new Long(boundNode.toString()));
+            anonstring.setBound(Long.valueOf(boundNode.toString()));
             anonstring.setType(simpleType.getQName());
 
             anon = anonstring;
@@ -189,7 +189,7 @@ public class StringVisitor extends VisitorBase {
             // corba:anonwstring
             Anonwstring anonwstring = new Anonwstring();
             anonwstring.setQName(new QName(typeMap.getTargetNamespace(), anonstringName));
-            anonwstring.setBound(new Long(boundNode.toString()));
+            anonwstring.setBound(Long.valueOf(boundNode.toString()));
             anonwstring.setType(simpleType.getQName());
 
             anon = anonwstring;
